--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello, again
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Second Website</title>
+  <head>
+  <body>
+    <h1>"Hello, again"</h1>
+  <body>
+</html>
